fix buttonIcon vertical alignment #84

--- a/src/ButtonIcon/style.css
+++ b/src/ButtonIcon/style.css
@@ -17,6 +17,7 @@
     padding: 0;
     border-radius: 50%;
     outline: 0;
+    vertical-align: middle;
 
     &::-moz-focus-inner {
         border: 0;
